# rag-gpt

./: .gitignore  Makefile  gunicorn_config.py  pyproject.toml
server/app/: files.py  queries.py
server/constant/: constants.py
server/rag/index/chunk/: markdown_splitter.py
server/rag/index/parser/file_loader/: csv_loader.py  docx_loader.py  pdf_loader.py  pptx_loader.py  xlsx_loader.py
